[package]
name = "bms-config-migrate"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3 # For profiling

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
atty = "0.2"
camino = "1.0"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
rustc-hash = "1.1"
simplelog = "0.12"
